trying to fix the whitespace

--- a/templates/rune/assets.css
+++ b/templates/rune/assets.css
@@ -9,6 +9,11 @@ body {
 	color: #191919;
 }
 
+header {
+	height: 0px;
+	overflow: hidden;
+}
+
 /* Fonts
 ------------------------------------------------ */
 
